register(git): edit index

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>ciao</p>
+    <h1>Nuovo Registro</h1>
+    <form action="">
+<input type="text" placeholder="Inserisci materia" id="newSubject">
+<button id="newSubject" onclick="openRegister()">Crea</button>
+</form>
     <script src="script.js"></script>
 </body>
 </html>
